order-service/envoy.yaml
static_resources:

  listeners:
    - name: order_ingress_listener

      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080

      filter_chains:
        - filters:

            - name: envoy.filters.network.http_connection_manager

              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager

                stat_prefix: order_ingress

                route_config:
                  name: order_ingress_route

                  virtual_hosts:
                    - name: order_service

                      domains:
                        - "*"

                      response_headers_to_add:
                        - header:
                            key: x-service-instance-id
                            value: "%HOSTNAME%"

                      routes:
                        - match:
                            prefix: "/"

                          route:
                            cluster: order_app

                http_filters:

                  - name: envoy.filters.http.router

                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: payment_client_listener

      address:
        socket_address:
          address: 127.0.0.1
          port_value: 4000

      filter_chains:
        - filters:

            - name: envoy.filters.network.http_connection_manager

              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager

                stat_prefix: payment_client

                route_config:
                  name: payment_client_route

                  virtual_hosts:
                    - name: payment_upstream

                      domains:
                        - "*"

                      routes:
                        - match:
                            prefix: "/"

                          route:
                            cluster: payment_envoy

                http_filters:

                  - name: envoy.filters.http.router

                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router


  clusters:

    - name: order_app

      type: STATIC

      connect_timeout: 1s

      load_assignment:

        cluster_name: order_app

        endpoints:

          - lb_endpoints:

              - endpoint:

                  address:

                    socket_address:
                      address: 127.0.0.1
                      port_value: 3000

    - name: payment_envoy

      type: STRICT_DNS

      connect_timeout: 5s

      load_assignment:

        cluster_name: payment_envoy

        endpoints:

          - lb_endpoints:

              - endpoint:

                  address:

                    socket_address:
                      address: payment-service
                      port_value: 4000
